--- a/gb/20/3/3/n11910762.md
+++ b/gb/20/3/3/n11910762.md
@@ -1,20 +1,20 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/qabgnz254/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qabgnz254/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/qabgnz254/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qabgnz254/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/qabgnz254/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qabgnz254/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/qabgnz254/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qabgnz254/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/qabgnz254/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qabgnz254/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/qabgnz254/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qabgnz254/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/qabgnz254/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qabgnz254/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/qabgnz254/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qabgnz254/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/qabgnz254/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/qabgnz254/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/qabgnz254/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/qabgnz254/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/qabgnz254/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/qabgnz254/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/qabgnz254/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/qabgnz254/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/qabgnz254/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/qabgnz254/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/qabgnz254/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/qabgnz254/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/qabgnz254/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/qabgnz254/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/qabgnz254/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/qabgnz254/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/qabgnz254/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/qabgnz254/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/qabgnz254/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/qabgnz254/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/qabgnz254/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/qabgnz254/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/qabgnz254/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/qabgnz254/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/qabgnz254/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/qabgnz254/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/qabgnz254/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/qabgnz254/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/qabgnz254/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【十字路口】连续换肺抗病毒 中共再曝活摘产业链</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/03/15f8c9a03ce89ea1_ttl7dayY1a_20200303-__-DJY-600x400.jpg" />
 <h6>【解读】连续换肺抗病毒，中共活摘产业链复活？王立军发明脑干撞击机做啥？中国脑死器官供体为何多？（大纪元合成）
 </h6>
 <hr>
 <p>【大纪元2020年03月03日讯】大家好，我是唐浩，今天都好吗？</p>
-<p>今天我们要继续带大家来关注肺炎疫情与器官移植的话题。因为我们在上一集节目才刚聊到，江苏完成首例<a href="https://github.com/qabgnz254/djy/blob/master/gb/tag/%E6%96%B0%E5%86%A0%E8%82%BA%E7%82%8E%E7%97%85%E6%82%A3.md">新冠肺炎病患</a>的肺移植手术，并且提出多项疑点来质疑，结果马上又出现了另一起肺移植案例。所以我们要来跟大家再好好聊一聊。</p>
+<p>今天我们要继续带大家来关注肺炎疫情与器官移植的话题。因为我们在上一集节目才刚聊到，江苏完成首例<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%96%B0%E5%86%A0%E8%82%BA%E7%82%8E%E7%97%85%E6%82%A3.md#1">新冠肺炎病患</a>的肺移植手术，并且提出多项疑点来质疑，结果马上又出现了另一起肺移植案例。所以我们要来跟大家再好好聊一聊。</p>
 <p>不过，先带大家来看一件事，昨天的节目出来之后，有网友陆续给了我们一些爆料反馈。</p>
 <p>有一名台湾网友说，“我有一个亲戚，十几年前，他真的花100多万（台币）去中国移植肾脏，而且不用排队，大约一个礼拜就有一颗新鲜的肾脏。”</p>
 <p>另一位中国网友则留言告诉我们，“地标广州，我有同事患尿毒症，医生说换肾需要五十来万（人民币），包匹配。”</p>
-<p>虽然这些留言，我们无法去一一详细查证，但是我们还是感谢网友提供消息，毕竟这些消息来自中国境内与海外，可以让大家感受到，中共系统性地<a href="https://github.com/qabgnz254/djy/blob/master/gb/tag/%E6%B4%BB%E6%91%98%E5%99%A8%E5%AE%98.md">活摘器官</a>、盗卖器官的事情，确实各地都有所接触、有所了解。我们也欢迎大家提供更多的相关信息。</p>
-<p><center><a src=""></a><a href="https://git.io/Jvamz"><img width="600" src="https://raw.githubusercontent.com/qabgnz254/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://git.io/JesJV">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/T0-P_6AmL5k" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center></p>
+<p>虽然这些留言，我们无法去一一详细查证，但是我们还是感谢网友提供消息，毕竟这些消息来自中国境内与海外，可以让大家感受到，中共系统性地<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%B4%BB%E6%91%98%E5%99%A8%E5%AE%98.md#1">活摘器官</a>、盗卖器官的事情，确实各地都有所接触、有所了解。我们也欢迎大家提供更多的相关信息。</p>
+<p><center><a src=""></a><a href="https://git.io/Jvamz"><img width="600" src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/T0-P_6AmL5k" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center></p>
 <h2><strong>?移植肺脏抗新冠病毒 中国出现“老年移植”首例</strong></h2>
-<p>好，昨天我们才跟大家聊到，江苏无锡人民医院陈静瑜的团队，在2月29日完成了中国首例<a href="https://github.com/qabgnz254/djy/blob/master/gb/tag/%E6%96%B0%E5%86%A0%E8%82%BA%E7%82%8E%E7%97%85%E6%82%A3.md">新冠肺炎病患</a>的<a href="https://github.com/qabgnz254/djy/blob/master/gb/tag/%E8%82%BA%E8%84%8F%E7%A7%BB%E6%A4%8D%E6%89%8B%E6%9C%AF.md">肺脏移植手术</a>，但背后疑点重重，包括了：器官来源不清楚，器官寻找、配型异常快速，医生与医院涉及<a href="https://github.com/qabgnz254/djy/blob/master/gb/tag/%E6%B4%BB%E6%91%98%E5%99%A8%E5%AE%98.md">活摘器官</a>被国际组织追查，以及中南海权贵可能涉入等等。</p>
+<p>好，昨天我们才跟大家聊到，江苏无锡人民医院陈静瑜的团队，在2月29日完成了中国首例<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%96%B0%E5%86%A0%E8%82%BA%E7%82%8E%E7%97%85%E6%82%A3.md#1">新冠肺炎病患</a>的<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E8%82%BA%E8%84%8F%E7%A7%BB%E6%A4%8D%E6%89%8B%E6%9C%AF.md#1">肺脏移植手术</a>，但背后疑点重重，包括了：器官来源不清楚，器官寻找、配型异常快速，医生与医院涉及<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%B4%BB%E6%91%98%E5%99%A8%E5%AE%98.md#1">活摘器官</a>被国际组织追查，以及中南海权贵可能涉入等等。</p>
 <p>没想到，隔天3月1日马上又出现了新的肺移植案例，地点是在浙江杭州的浙江大学第一附属医院（浙大一院），而且强调是“全球首例老年新冠肺移植手术成功”。</p>
 <p>这次浙大一院的手术，与江苏无锡的手术一样，受到中共党媒的高调报导宣传。根据几家党媒的报导，我们大致说明一下这起肺移植案例的经过：</p>
 <p>1月31日，一名66岁的女性确诊感染新冠肺炎。</p>
@@ -25,8 +25,7 @@
 <p>好，如果您有看我们3月2日的节目的话，就会很容易地发现：第一，这次浙江案例的报导与江苏案例的报导一样，党媒对于器官来源的说明，再次含糊其词，只有简单九个字：“一位湖南脑死亡患者”，而且还同样是“脑死亡患者”。</p>
 <p>我们不确定中国每天有多少人脑死亡，不过，器官供体是因为什么原因而脑死亡，这一点，党媒在这两起案例里都没有说明。而且，脑死亡者的器官又刚好能够和病患配型成功，这个概率真的是相当不容易，如果不是上天的恩典安排，那么就是背后可能藏着活摘器官的魔鬼交易。</p>
 <p>当然，我们不能排除真的可能连续两天都有脑死亡患者捐出肺脏，而且都刚好配型成功，遗爱人间。</p>
-<p>只是根据专家说法，陌生人之间要器官配型成功的概率相当低，以肾脏为例，直系亲属之间配型成功的概率是50%，如果是非亲属的一般人，配型成功率大概只有20%到30%之间。</p>
-<p>所以，我们更担心的是，“脑死亡患者”这个说词，会不会是中共用来对外掩盖活摘人体器官的廉价托词。</p>
+<p>只是根据专家说法，陌生人之间要器官配型成功的概率相当低。所以，我们更担心的是，“脑死亡患者”这个说词，会不会是中共用来对外掩盖活摘人体器官的廉价托词。</p>
 <p>不过，这次案例与江苏案例的报导相比，至少器官供体来源还有点出了是来自“湖南省”，而不是模糊不清的“外地”。</p>
 <p>根据《新京报》对主刀医生、浙大一院肺移植科主任韩威力的专访，可以发现，这次供体是来自湖南省怀化市通道县。这里呢，是少数民族侗族的自治县，位于山区，地点偏远。</p>
 <p>根据韩威力的说法，浙大一院的两名医生，是先搭了六个小时的高铁到怀化，再搭两小时的车抵达通道县，取得器官之后，再搭车到桂林，改搭飞机回杭州。</p>
@@ -89,46 +88,50 @@
 屠民割器血漫尘<br />
 惑迷四海冥狱步</p>
 <p>唐浩#</p>
-<p>大纪元《<a href="https://github.com/qabgnz254/djy/blob/master/gb/tag/%E4%B8%96%E7%95%8C%E5%8D%81%E5%AD%97%E8%B7%AF%E5%8F%A3.md">世界十字路口</a>》制作组</p>
+<p>大纪元《<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%B8%96%E7%95%8C%E5%8D%81%E5%AD%97%E8%B7%AF%E5%8F%A3.md#1">世界十字路口</a>》制作组</p>
 <p>责任编辑：李昊</p>
 
 <hr>
-
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/20/3/3/n11910762.htm">【十字路口】连续换肺抗病毒 中共再曝活摘产业链</a>
-
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/2/29/n11904225.htm">【十字路口】港警逮捕黎智英等人 有五大算计？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/28/n11901926.htm">【十字路口】世卫警告全球大流行 钟南山甩锅</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/25/n11893784.htm">【十字路口】病人未死被火化 武汉解封曝权斗</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/24/n11890795.htm">【十字路口】习开17万人会议 曝疫情内幕与危机？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/22/n11887894.htm">【十字路口】病毒攻进中南海？中共或瞒新疫情</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11884891.htm">【十字路口】赚钱胜人命 中共急复工隐瞒疫情</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11878972.htm">【十字路口】武汉医生揭疫情内幕 公安也倒地</a></li>
-> <li><a href="https://github.com/qabgnz254/djy/blob/master/gb/20/3/2/n11910086.md">美媒曝武汉市官员下令不要透露太多疫情</a></li>
-> <li><a href="https://github.com/qabgnz254/djy/blob/master/gb/20/3/2/n11910002.md">世卫：武汉肺炎10大症状 两类人重症风险高</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/2/24/n11890652.htm">【更新】疫情扩散75国及地区 中共假数据曝光</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/2/n11910313.htm">蝗虫大军恐袭击西藏云南 中共发紧急通知</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/2/n11909414.htm">陆媒三炮齐发 揭中共卫健委隐瞒疫情</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/2/n11908356.htm">【翻墙必看】武汉肺炎零号病人到底是谁？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/28/n11902923.htm">犹太拉比谈武汉肺炎：弥赛亚现身前十灾重演</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/2/n11908043.htm">子丑之年江边起──预言中的“大瘟疫”</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869303.htm">肺炎瘟疫《推背图》56象之卦如何解出路？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11877987.htm">为何一地蝗虫灾 一地凤凰来？天人感应不虚</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/1/n11906520.htm">湖北官员下发消毒片 村民食后中毒送医</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/1/n11907540.htm">大陆“外国人永居管理条例”引轩然大波</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/28/n11903401.htm">钟南山自曝疾控中心没权力的背后</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/2/n11909676.htm">【直播回放】3.2新肺炎追踪：伊朗领袖顾问病逝</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/3/n11910762.htm">【十字路口】连续换肺抗病毒 中共再曝活摘产业链</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/3/n11910939.htm">【拍案惊奇】陈秋实生死谜 中共买防弹衣玄机</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/1/n11907045.htm">宋慧乔、IU等自米兰时装周返韩 恐陷感染危机</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/1/n11907574.htm">港人纪念8.31事件被抓 杜汶泽黄秋生斥黑警</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/2/n11909319.htm">被辛龙收当干妹 严立婷盼嫂子刘真渡过难关</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/29/n11905163.htm">《极地守护犬》影评：拥有好主人 未必是狗的唯一归宿</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/2/n11910094.htm">赞公主邮轮船长暖举 魔术师陈日昇：帅到爆</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/qabgnz254/djy/blob/master/gb/20/3/3/n11910762.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/qabgnz254/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qabgnz254/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/qabgnz254/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/qabgnz254/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/qabgnz254/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qabgnz254/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/qabgnz254/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qabgnz254/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/qabgnz254/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qabgnz254/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/qabgnz254/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qabgnz254/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/qabgnz254/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qabgnz254/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/qabgnz254/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qabgnz254/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/qabgnz254/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qabgnz254/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/qabgnz254/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qabgnz254/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/qabgnz254/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qabgnz254/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/qabgnz254/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qabgnz254/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/qabgnz254/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qabgnz254/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/qabgnz254/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qabgnz254/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/qabgnz254/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qabgnz254/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/qabgnz254/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qabgnz254/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/qabgnz254/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qabgnz254/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/qabgnz254/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qabgnz254/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/qabgnz254/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qabgnz254/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/qabgnz254/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qabgnz254/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/qabgnz254/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qabgnz254/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/qabgnz254/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qabgnz254/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/qabgnz254/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qabgnz254/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/qabgnz254/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qabgnz254/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/29/n11904225.md#1">【十字路口】港警逮捕黎智英等人 有五大算计？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/28/n11901926.md#1">【十字路口】世卫警告全球大流行 钟南山甩锅</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/25/n11893784.md#1">【十字路口】病人未死被火化 武汉解封曝权斗</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/24/n11890795.md#1">【十字路口】习开17万人会议 曝疫情内幕与危机？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/22/n11887894.md#1">【十字路口】病毒攻进中南海？中共或瞒新疫情</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/21/n11884891.md#1">【十字路口】赚钱胜人命 中共急复工隐瞒疫情</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/19/n11878972.md#1">【十字路口】武汉医生揭疫情内幕 公安也倒地</a></li>
+<hr>
+
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/6/n10619679.md#1" target="_blank">林辉：教授从练习低头弯腰到乐极生悲</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/17/n11800547.md#1" target="_blank">新年集体炼功交流 法轮功修炼者遍及俄罗斯</a></li><hr>
+
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936484.md#1">中共发言人赖美军带疫情到武汉 国际哗然</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11937929.md#1">陈时中：中共谈疫情没人信 WHO什么都不说</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936666.md#1">美国CDC承认了什么？中共再造假</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/5/n11918064.md#1">【文史】为一场地震 冥界筹备了50年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/6/n11920009.md#1">皇上对蝗虫说了一句话 漫天蝗灾彻底消失</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">中国等国为何疫情严重？犹太拉比：神在除恶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934088.md#1">传钟南山被免职 专家组组长悄悄换人内幕</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936289.md#1">【新闻看点】发哨人引爆舆情 习访武汉 官宣破产</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936264.md#1">孝感高价菜引爆大规模抗议 市民怒喊“下课”</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938828.md#1">【新闻看点】甩锅美军 中共外交部演双簧？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11927966.md#1">【罗厨寻味】腊味炒荷兰豆</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938032.md#1">父母染疫去世 武汉青山区爆孤儿隔离点</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935159.md#1">世卫改武汉肺炎名称 黄秋生斥责获网友赞爆</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934318.md#1">“女版黄安”刘乐妍返台住院用健保 网友炮轰</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933566.md#1">传中共广电局下限籍令 刘亦菲吴亦凡或受影响</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936148.md#1">意大利为何疫情严重？意裔台湾男星析原因</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933325.md#1">吴亦凡从加国回中国复工 一抵达便被带走隔离</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/3/3/n11910762.htm">【十字路口】连续换肺抗病毒 中共再曝活摘产业链</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/20/3/3/n11910762.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
